Use the paginator from django_mailman3

--- a/hyperkitty/static/hyperkitty/sass/_hyperkitty-index.scss
+++ b/hyperkitty/static/hyperkitty/sass/_hyperkitty-index.scss
@@ -43,7 +43,7 @@ $headerNavPadding: 7px;
             margin-top: -3px;
         }
     }
-    nav {
+    nav.sort-mode {
         padding-top: 0;
         background-color: white;
         position: absolute;
