--- a/hyperkitty/templates/hyperkitty/base.html
+++ b/hyperkitty/templates/hyperkitty/base.html
@@ -236,6 +236,7 @@
     <script type="text/javascript" src="{% static 'hyperkitty/libs/jquery.expander.js' %}" />
     <script type="text/javascript" src="{% static 'hyperkitty/libs/d3.v2.min.js' %}" />
     <script type="text/javascript" src="{% static 'hyperkitty/libs/jquery.hotkeys.js' %}" />
+    <script type="text/javascript" src="{% static 'django-mailman3/js/main.js' %}" />
     <script type="text/javascript" src="{% static 'hyperkitty/js/hyperkitty-common.js' %}" />
     <script type="text/javascript" src="{% static 'hyperkitty/js/hyperkitty-index.js' %}" />
     <script type="text/javascript" src="{% static 'hyperkitty/js/hyperkitty-overview.js' %}" />
