--- a/hyperkitty/templates/hyperkitty/user_posts.html
+++ b/hyperkitty/templates/hyperkitty/user_posts.html
@@ -2,6 +2,7 @@
 {% load i18n %}
 {% load gravatar %}
 {% load hk_generic %}
+{% load pagination %}
 
 
 {% block head_title %}
@@ -48,7 +49,7 @@
             <p>{% trans "Sorry no email could be found by this user." %}</p>
         {% endfor %}
 
-        {% include "hyperkitty/paginator.html" with pager=emails %}
+        {% paginator emails bydate=True %}
 
     </div>
 
