making new monthly calendar thread list responsive for small screen sizes

--- a/hyperkitty/static/hyperkitty/sass/_hyperkitty-threadslist.scss
+++ b/hyperkitty/static/hyperkitty/sass/_hyperkitty-threadslist.scss
@@ -181,3 +181,17 @@
         margin-bottom: 0.5em;
     }
 }
+
+
+// for small screen sizes
+@media (max-width: 767px) {
+
+// for monthly thread list, to align 
+// collapsed right column underneath
+// left in smaller screen width
+.thread-email {
+	.thread-date {
+		margin-top: 1.5em;
+	}
+  }
+}
