--- a/hyperkitty/templates/hyperkitty/overview.html
+++ b/hyperkitty/templates/hyperkitty/overview.html
@@ -73,7 +73,7 @@
                 </a>
                 {% if 'postorius' in INSTALLED_APPS %}
                 <!-- Subscription -->
-                <a class="btn btn-default" href=""{% url 'list_summary' mlist.list_id %}>
+                <a class="btn btn-default" href="{% url 'list_summary' mlist.list_id %}">
                   <i class="fa fa-inbox"></i>
                   <span class="hidden-tn hidden-xs">Manage s</span><span class="hidden-sm hidden-md hidden-lg">S</span>ubscription</a>
                 {% endif %}
