--- a/hyperkitty/templates/hyperkitty/user_public_profile.html
+++ b/hyperkitty/templates/hyperkitty/user_public_profile.html
@@ -37,12 +37,26 @@
                     <span class="likestatus">+{{ likes }}/-{{ dislikes }}</span>
                 </td>
             </tr>
+            {% if user.is_superuser %}
+            <tr>
+                <th>{% trans 'Email addresses:' %}</th>
+                <td>
+                    <ul>
+                    {% for addr in addresses %}
+                        <li>{{ addr }}</li>
+                    {% endfor %}
+                    </ul>
+                </td>
+            </tr>
+            {% endif %}
         </tbody>
     </table>
 
+    {% if addresses %}
     <div class="gravatar">
-        {% gravatar email 100 %}
+        {% gravatar addresses.0 100 %}
     </div>
+    {% endif %}
 
 
 </div>
