Move statistics to the side of activity graph
And some other minor visual tweaks.
The mailing lists statistics are now next to the activity graph if the view is
wide enough. Otherwise, it'll be underneath the description and the activity
graph disappears.

--- a/hyperkitty/static/hyperkitty/sass/_hyperkitty-common.scss
+++ b/hyperkitty/static/hyperkitty/sass/_hyperkitty-common.scss
@@ -142,7 +142,7 @@ h1 {
 ul.list-stats {
     margin: 0;
     li {
-        display: inline;
+        display: inline-block;
     }
     li+li {
         padding-left: 0.75em;
@@ -320,6 +320,7 @@ div#months-list {
     position: relative;
     margin: auto;
     padding-top: 3px;
+    background-color: $pre-bg;
     // default behavior is to hide axes
     .axis path, .chart-data .axis line {
         display: none;
