Fix the pagination on search results
Fixes #119

--- a/hyperkitty/templates/hyperkitty/search_results.html
+++ b/hyperkitty/templates/hyperkitty/search_results.html
@@ -90,7 +90,7 @@
             <p style="font-style:italic;font-size:small;color:#ccc">{% trans "these are not the messages you are looking for" %}</p>
         {% endif %}
 
-        {% paginator email %}
+        {% paginator emails %}
 
     </div>
 
