--- a/hyperkitty/templates/hyperkitty/overview.html
+++ b/hyperkitty/templates/hyperkitty/overview.html
@@ -80,7 +80,7 @@
             </div>
             <form name="search" method="get" action="{% url 'hk_search' %}" class="searchbar col-tn-8 col-xs-4 hidden-sm hidden-md hidden-lg" role="search">
                 {% if mlist %}<input type="hidden" name="list" value="{{ mlist.name }}" />{% endif %}
-                <input id="nav-tab-search" name="query" type="text" class="form-control"
+                <input id="nav-tab-search" name="q" type="text" class="form-control"
                        placeholder="{% trans 'Search this list' %}"
                        {% if query %}value="{{ query }}"{% endif %}
                        />
