--- a/hyperkitty/templates/hyperkitty/base.html
+++ b/hyperkitty/templates/hyperkitty/base.html
@@ -36,7 +36,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" id="archives-name" href="{% url 'hk_root' %}">{{ site_name|title }}</a>
+                {% include 'hyperkitty/navbar-brand.html' %}
             </div> <!-- /navbar-header -->
 
             <div class="navbar-collapse collapse"> <!--part of navbar that's collapsed on small screens-->
