--- a/hyperkitty/templates/hyperkitty/messages/summary_message.html
+++ b/hyperkitty/templates/hyperkitty/messages/summary_message.html
@@ -12,7 +12,7 @@
                         {% else %}
                                 <div class="gravatar-placeholder">&nbsp;</div>
                         {% endif %}
-                        <!-- {{ email.sender_name|escapeemail }} -->
+                        <!-- {{ email.sender_name|default:email.sender.address|escapeemail }} -->
                     </div>
                     <div class="col-tn-12 col-sm-10 col-md-7 col-lg-8">
                         <span class="thread-title">
@@ -21,7 +21,7 @@
                                >{{ email.subject|strip_subject:mlist }}</a>
                         </span>
                         <div>
-                            {% blocktrans with name=email.sender_name|escapeemail %}
+                            {% blocktrans with name=email.sender_name|default:email.sender.address|escapeemail %}
                                 by {{ name }}
                             {% endblocktrans %}
                         </div>
