--- a/hyperkitty/templates/hyperkitty/threads/summary_thread_large.html
+++ b/hyperkitty/templates/hyperkitty/threads/summary_thread_large.html
@@ -32,7 +32,7 @@
                                 </a>
                                 </span>
                                 <div>
-                                    {% blocktrans with name=thread.starting_email.sender_name|escapeemail %}
+                                    {% blocktrans with name=thread.starting_email.sender_name|default:thread.starting_email.sender.address|escapeemail %}
                                         by {{ name }}
                                     {% endblocktrans %}
                                 </div>
