--- a/hyperkitty/templates/hyperkitty/ajax/temp_message.html
+++ b/hyperkitty/templates/hyperkitty/ajax/temp_message.html
@@ -12,10 +12,10 @@
                 <span class="date">{% trans "Sent just now, not yet distributed" %}</span>
             </div>
             <div class="gravatar{% if use_mockups %} pull-left{% endif %}">
-                {% gravatar email.sender_email 120 %}
+                {% gravatar email.sender_address 120 %}
             </div>
             <div class="email-author inline-block">
-                <span class="name">{{email.sender_name|default:email.sender.address|escapeemail}}</span>
+                <span class="name">{{email.sender_name|default:email.sender_address|escapeemail}}</span>
                 {% if use_mockups %}
                 <br />
                 <span class="rank">
