--- a/hyperkitty/templates/hyperkitty/threads/tags.html
+++ b/hyperkitty/templates/hyperkitty/threads/tags.html
@@ -2,7 +2,7 @@
 
         <span id="tag-title">{% trans "tags" %}</span> ({{thread.tags.distinct.count}})
         {% if thread.tags.count %}
-        <ul class="inline">
+        <ul class="list-inline">
             {% for tag in thread.tags.distinct %}
             <li>
                 <a href="{#% url 'hk_search_tag' mlist_fqdn=thread.mailinglist.name tag=tag.name %#}"
