Don't allow anonymous users to add tags.

--- a/hyperkitty/templates/hyperkitty/threads/right_col.html
+++ b/hyperkitty/templates/hyperkitty/threads/right_col.html
@@ -82,6 +82,7 @@
     <div id="tags">
         {% include 'hyperkitty/threads/tags.html' %}
     </div>
+    {% if user.is_authenticated %}
     <div id="add-tag">
         <form id="add-tag-form" name="addtag" method="post"
               action="{% url 'hk_tags' mlist_fqdn=mlist.name threadid=thread.thread_id %}"
@@ -91,6 +92,7 @@
             {{ addtag_form.as_p }}
         </form>
     </div>
+    {% endif %}
     {% cache 86400 thread_participants thread.id %}
     <div id="participants">
         <span id="participants_title">{% trans "participants" %}</span> ({{ thread.participants_count }})
