--- a/hyperkitty/templates/hyperkitty/ajax/temp_message.html
+++ b/hyperkitty/templates/hyperkitty/ajax/temp_message.html
@@ -11,17 +11,11 @@
             <div class="email-date inline-block pull-right">
                 <span class="date">{% trans "Sent just now, not yet distributed" %}</span>
             </div>
-            <div class="gravatar{% if use_mockups %} pull-left{% endif %}">
+            <div class="gravatar">
                 {% gravatar email.sender_address 120 %}
             </div>
             <div class="email-author inline-block">
                 <span class="name">{{email.sender_name|default:email.sender_address|escapeemail}}</span>
-                {% if use_mockups %}
-                <br />
-                <span class="rank">
-                    {% trans "Rank 8" %}
-                </span>
-                {% endif %}
             </div>
         </div>
 
