Better position of the unread marker

--- a/hyperkitty/static/hyperkitty/sass/_hyperkitty-message.scss
+++ b/hyperkitty/static/hyperkitty/sass/_hyperkitty-message.scss
@@ -62,6 +62,7 @@ $oddEmailColor: rgb(238, 238, 238);
 
     .fa-envelope {
         font-size: 130%;
+        margin-right: 10px;
     }
 
     .messagelink {
