--- a/hyperkitty/templates/hyperkitty/thread_list.html
+++ b/hyperkitty/templates/hyperkitty/thread_list.html
@@ -49,8 +49,8 @@
                 <a href="{% url "hk_message_new" mlist_fqdn=mlist.name %}"
                     class="btn btn-default{% if not user.is_authenticated %} disabled{% endif %}">
                     <i class="fa fa-plus"></i>
-                    <span class="hidden-tn hidden-xs">Start a n</span><span class="hidden-sm hidden-md hidden-lg">N</span>ew thread
-                    </a>
+                    {% trans '<span class="hidden-tn hidden-xs">Start a n</span><span class="hidden-sm hidden-md hidden-lg">N</span>ew thread' %}
+                </a>
             </div>
         </div>
 
