--- a/hyperkitty/static/hyperkitty/sass/_hyperkitty-common.scss
+++ b/hyperkitty/static/hyperkitty/sass/_hyperkitty-common.scss
@@ -106,7 +106,7 @@ h1 {
     .alert.info    { @include alert-variant($alert-info-bg, $alert-info-border, $alert-info-text); }
     .alert.success { @include alert-variant($alert-success-bg, $alert-success-border, $alert-success-text); }
     .alert.warning { @include alert-variant($alert-warning-bg, $alert-warning-border, $alert-warning-text); }
-    .alert.error   { @include alert-variant($alert-danger-bg, $alert-danger-border, $alert-danger-text); }
+    .alert.error, .alert.danger { @include alert-variant($alert-danger-bg, $alert-danger-border, $alert-danger-text); }
 }
 
 // Favorites
